Changes for back disable in layout page
Changes for back disable in layout page

--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -47,7 +47,11 @@
          =====================================================================-->
 
     <link href="../assets/bootstrap/css/paging-style.css" rel="stylesheet" />
-
+    <script type = "text/javascript" >
+        function preventBack() { window.history.forward(); }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+    </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
